addons/istio/tests/dns-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: tester
spec:
  type: ClusterIP
  selector:
    app: tester
  ports:
  - name: http-tester
    port: 8000
    targetPort: 80
